[package]
name = "reaper"
version = "0.1.3"
edition = "2018"
repository = "https://github.com/michieldwitte/reaper"

[dependencies]
nix = "0.27.1"
libc = "0.2.139"
ctrlc = { version="3.4.1", features = ["termination"] }

[profile.release]
strip = true
opt-level = "z"
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
